# Jailbreak-Redteam

./: .gitignore  README.md  data_sample50.json  pyproject.toml
attacks/: __init__.py  demo_figstep.py
attacks_strategy/arttextfigstep/: attack.py
attacks_strategy/cs_dj/: attack.py
attacks_strategy/email/: __init__.py  attack.py  demo.py
attacks_strategy/figstep/: attack.py
attacks_strategy/flowchart/: __init__.py  attack.py
attacks_strategy/hades/: attack.py
attacks_strategy/himrd/: attack.py
attacks_strategy/jood/: attack.py
attacks_strategy/mml/: attack.py
attacks_strategy/qr/: attack.py
attacks_strategy/sd35_figstep/: attack.py
attacks_strategy/si/: attack.py
attacks_strategy/socialmedia/: __init__.py  attack.py  demo.py
attacks_strategy/viscra/: attack.py
attacks_strategy/visual_perturb/: __init__.py  jigsaw.py  multimodal_shuffle.py  photographic.py  utils.py
configs/: run.yaml  run_llm_guided.yaml  run_sample50.yaml  run_visual_perturb.yaml
configs/attacks/: email.yaml  flowchart.yaml  jigsaw.yaml  multimodal_shuffle.yaml  photographic.yaml  slack.yaml
core/: base_classes.py
runs/demo-run-001/: best_path.md  (+4 more)
scripts/: analyze_results.py  analyze_stability.py  run_all_experiments.py  run_batch.py  run_dynamic_experiments.sh  run_exp5_6.sh  test_email_attack.py
tests/: test_attacks_adapter_registry.py  test_demo_attack_and_cli_registry.py  test_execute_node.py  test_expand_node.py  test_graph_loop.py  test_judge_client_and_node.py  test_llm_guided_strategy.py  test_select_node.py  test_state_and_storage.py  test_vllm_client.py
(+55 files in other folders)
